--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ The struggle led to a series of experiments which resulted in an epiphany discov
 <div class="video-container">
     <iframe width="325" height="560" src="https://www.youtube.com/embed/dMTH0zFvFww" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
-<i>I started with 20 episodes as poc and increased the size to 60 episodes that made the model work reallly well. Then the moving jaw of the so100 broke down and was replaced. I had to collect another 10 episodes to finetune the model to account for the differences caused by the new jaw. 
+<i>I started with 20 episodes as poc and increased it to 60 that made the model work reallly well. Then the moving jaw of the so100 broke down and was replaced. I had to collect another 10 episodes to finetune the model to account for the differences caused by the new jaw. 
     <a href="https://huggingface.co/spaces/lerobot/visualize_dataset?path=%2Fpaszea%2Flekiwi_aug_grab">Dataset</a></i>
 <p>
 I was quite excited by the bbox discovery since the model also generalized. It enabled me to easily build an agentic robot demo like the following without any additional training. The robot chatted and fetched what's asked of it, and could recover from its failures.
