--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ Along the way I've been reading robotics papers. At this point, I came across a 
 In-context learning still requires a few demonstrations. Could we do better without any demonstrations, as some Gemini Robotics demos did, like zero-shot? 
 </p>
 <p>
-Zero-shot sounded nice! To get it, I first had the idea of developing a simplified inverse kinematics (IK) model to move the robot's gripper to any given point in images. I had no idea how to manually craft such a model for so100. But I could use AI to train a model to do it for me, which required no linear algebras or measurements. This X thread explains how it's done.
+Zero-shot sounded nice! To get it, I first had the idea of developing a simplified inverse kinematics (IK) model to move the robot's gripper to any given point in images. I didn't know how to manually craft such a model for so100. So I trained a simpilfied model to do it for me that required no linear algebras or measurements. This X thread explains how it's done.
 </p>
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">So100 costs $110. I has no fancy features. You control it by setting its 6-joint positions.<br><br>But you can develop a fancy feature, like a simplified IK to move the arm to an arbitrary position in images. See <a href="https://t.co/1ZzuOJEs4M">pic.twitter.com/1ZzuOJEs4M</a></p>&mdash; xun (@paszea) <a href="https://twitter.com/paszea/status/1932559764241994197?ref_src=twsrc%5Etfw">June 10, 2025</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
