--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ I used to find it quite amusing to watch pre-LLM era robots playing soccer. They
 Cloth folding, picnic packing, kitchen cleaning, needle threading, all terain robo-dogs, dancing humanoids, you name it.
 </p>
 <p>You could almost smell in the air that a robotic future is near:  robots, all shapes and sizes, living with us in our homes, shops, offices and factories, performing all types of useful tasks.
-As I worked on these projects in the past two and half months, I couldn't help but feel this future is coming at us fast - the full implemention may take long, but it's inevitable.
+As I worked on these projects the past two and half months, I couldn't help but feel this future is coming at us fast - the full implemention may take long, but inevitable.
 </p>
 
 <h2>The journey continues</h2>
