--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@ Eager for more, I moved to a harder challenge: multi-lego pick-n-place. ACT coul
 <i>One overhead camera. Finetuned for 20k steps (2 hours.) Pretty impressive it worked so well. I also finetuned Pi0 for 20k steps using the same data but couldn't get it to work nearly as well. Maybe I didn't train it long enough.
 <a href="https://huggingface.co/spaces/lerobot/visualize_dataset?path=%2Fpaszea%2Fso100_lego_mix">Dataset</a></i>
 <p>
-Then Pi0. Despite the failure last time, Pi0 is actually a very good model. And this time I made it work and it worked very well. I could see the arm was visibly less shaky and more precise under Pi0 than N1.
+Then Pi0. Despite the failure last time, Pi0 is actually a very good model. This time I made it work and it worked very well. I could see the arm was visibly less shaky and more precise under Pi0 than under N1 previously.
 </p>
 <div class="video-container">
     <iframe width="325" height="560" src="https://www.youtube.com/embed/JrbZqQxib5k" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
-<i>This time with two cameras (front & wrist) and trained for long (40k+ steps), Pi0 worked really well.
+<i>With two cameras (front & wrist) and trained for long (40k+ steps), Pi0 worked really well.
 Surprisingly N1 didn't do well in this 2-camera setting. Not sure why.
 <a href="https://huggingface.co/spaces/lerobot/visualize_dataset?path=%2Fpaszea%2Fso100_lego_2cam">Dataset</a></i>
 <p>
