--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ Challenges now escalated to games! And it gave me the first opportunity to use L
     <iframe width="325" height="560" src="https://www.youtube.com/embed/MpV-O8Q5-x4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 <p>
-Yet at this point I didn't really know how to effectively train a VLA to pick and place at specific locations especially when combinations are many. The usual language conditioning of ACT, Pi0 and N1, in my experiments, was not quite up to the task, at least not without a large amount of data. As a result I resorted to manual prescripting a set of primitives, e.g. pick the first lego, put to top-right, etc. How to automate them using a model remained a struggle for me for a while.
+Yet at this point I didn't really know how to effectively train a VLA to pick and place at specific locations especially when combinations are many. The usual language conditioning of ACT, Pi0 and N1, in my experiments, was not quite up to the task, at least not without a large amount of data. As a result I resorted to manually prescripting a set of primitives, e.g. pick the first lego, put to top-right, etc. How to automate them using a model remained a struggle for me for a while.
 </p>
 <p>
 The struggle led to a series of experiments which resulted in an epiphany discovery of using bounding boxes (bbox) to condition ACT for precise control and accuracy <i>(<a href="https://discord.com/channels/1216765309076115607/1237738269500899400/1367605706496282725">Details</a>)</i>:
@@ -103,7 +103,7 @@ The struggle led to a series of experiments which resulted in an epiphany discov
 <div class="video-container">
     <iframe width="325" height="560" src="https://www.youtube.com/embed/dMTH0zFvFww" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
-<i>I started with 20 episodes as poc and increased it to 60 that made the model work reallly well. Then the moving jaw of the so100 broke down and was replaced. I had to collect another 10 episodes to finetune the model to account for the differences caused by the new jaw. 
+<i>I started with 20 episodes as poc and increased it to 60 episodes which made the model work reallly well. Then the arm's moving jaw broke down and was replaced. I had to collect another 10 episodes to finetune the model to account for the differences caused by the new jaw. 
     <a href="https://huggingface.co/spaces/lerobot/visualize_dataset?path=%2Fpaszea%2Flekiwi_aug_grab">Dataset</a></i>
 <p>
 I was quite excited by the bbox discovery since the model also generalized. It enabled me to easily build an agentic robot demo like the following without any additional training. The robot chatted and fetched what's asked of it, and could recover from its failures.
