--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ Agentic and autonomous robots are always facinating especially if you combine lo
 <i>The model was almost the same as the previous one except the cameras were mounted on lekiwi, which enabled it to roam. And I didnt bother to train a locomotion model. I simply prompted gemini to direct the robot to go around in a specific order to search for legos.</i>
 <p>
 Seeing the success of bbox, I started to wonder whether images, which are the standard input to VLA, are really necessary in the presence of bbox? Could models do away with them? That led to the development of "Blind ACT".
-<br><i>(Check full X threads for details and datasets)</i>
+<br><i>(For more details and datasets check the full X threads)</i>
 </p>
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Blind ACT - a poor man&#39;s IK<br><br>How do you like an ACT model that grasps like a pro, but is 4x as fast and invariant to scene changes?<br><br>The so100 in the demo is controlled by a policy that sees nothing. The image on the laptop is for humans to visualize. The robot acts blind. 1/n <a href="https://t.co/S8WgyAARyO">pic.twitter.com/S8WgyAARyO</a></p>&mdash; xun (@paszea) <a href="https://twitter.com/paszea/status/1924872831378358272?ref_src=twsrc%5Etfw">May 20, 2025</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
